Fix #147: Export menu is sometimes empty
Task-Url: https://github.com/turesheim/eclipse-timekeeper/issues/147

--- a/net.resheim.eclipse.timekeeper.ui/plugin.xml
+++ b/net.resheim.eclipse.timekeeper.ui/plugin.xml
@@ -85,8 +85,11 @@
       </menuContribution>
       <menuContribution
             allPopups="false"
-            class="net.resheim.eclipse.timekeeper.ui.export.TemplateExportMenu"
             locationURI="menu:export">
+         <dynamic
+               class="net.resheim.eclipse.timekeeper.ui.export.TemplateExportMenu"
+               id="net.resheim.eclipse.timekeeper.ui.dynamicTemplateMenu">
+         </dynamic>
       </menuContribution>
    </extension>
    <extension
