--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - sh -e /etc/init.d/xvfb start - sleep 10 
 
 script: 
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent verify -Pother-os -Dtycho.localArtifacts=ignore
+  - mvn clean verify -Pother-os -Dtycho.localArtifacts=ignore
   - sonar-scanner
 jdk:
   - openjdk8
