--- a/net.resheim.eclipse.timekeeper.test/pom.xml
+++ b/net.resheim.eclipse.timekeeper.test/pom.xml
@@ -60,24 +60,28 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.jacoco</groupId>
+				<groupId>org.jacoco</groupId>				
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.4</version>
+				<version>${jacoco.version}</version>
 				<configuration>
-					<includes>net.resheim.**</includes>					
+					<dataFile>${project.basedir}/../target/jacoco.exec</dataFile>
+					<destFile>${project.basedir}/../target/jacoco.exec</destFile>
+					<outputDirectory>${project.basedir}/../target/</outputDirectory>
+					<append>true</append>
 				</configuration>
 				<executions>
 					<execution>
+						<id>agent</id>
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
 					</execution>
-					<execution>
-						<id>coverage-report</id>
-						<phase>verify</phase>
-						<goals>
-							<goal>report-aggregate</goal>
-						</goals>
+               		<execution>
+                    	<id>report</id>
+                    	<phase>post-integration-test</phase>
+	                    <goals>
+	                        <goal>report</goal>
+	                    </goals>
 					</execution>
 				</executions>
 			</plugin>
