--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,9 +11,13 @@ sonar.links.ci=https://travis-ci.org/turesheim/eclipse-timekeeper
 sonar.links.scm=https://github.com/turesheim/eclipse-timekeeper.git
 sonar.links.issue=https://github.com/turesheim/eclipse-timekeeper/issues
 
-# we simply need this to stop the whining
 sonar.sources=src 
+sonar.language=java
 sonar.java.coveragePlugin=jacoco
+sonar.coverage.jacoco.xmlReportPaths=target/jacoco/jacoco.xml
+sonar.jacoco.reportPaths=target/jacoco.exec,target/jacoco-it.exec
+sonar.sources=src,src-test
+sonar.java.binaries=/target/classes
 
 # java version used by source files:
 sonar.java.source=8
@@ -28,7 +32,7 @@ net.resheim.eclipse.timekeeper.db.sonar.java.binaries=target/classes
 net.resheim.eclipse.timekeeper.ui.sonar.projectName=Timekeeper User Interface
 net.resheim.eclipse.timekeeper.ui.sonar.sources=src
 net.resheim.eclipse.timekeeper.ui.sonar.java.binaries=target/classes
-# Integration tests
-net.resheim.eclipse.timekeeper.test.sonar.projectName=Timekeeper Integration Tests
-net.resheim.eclipse.timekeeper.test.sonar.sources=src
-net.resheim.eclipse.timekeeper.test.sonar.java.binaries=target/classes
+# Database plugin
+net.resheim.eclipse.timekeeper.db.sonar.projectName=Timekeeper Integration Tests
+net.resheim.eclipse.timekeeper.db.sonar.sources=src
+net.resheim.eclipse.timekeeper.db.sonar.java.binaries=target/classes
