--- a/net.resheim.eclipse.timekeeper.db/pom.xml
+++ b/net.resheim.eclipse.timekeeper.db/pom.xml
@@ -91,9 +91,9 @@
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>${jacoco.version}</version>
 				<configuration>
-					<dataFile>${project.basedir}/../target/jacoco.exec</dataFile>
-					<destFile>${project.basedir}/../target/jacoco.exec</destFile>
-					<outputDirectory>${project.basedir}/../target/</outputDirectory>
+					<dataFile>${project.build.directory}/jacoco.exec</dataFile>
+					<destFile>${project.build.directory}/jacoco.exec</destFile>
+					<outputDirectory>${project.build.directory}/jacoco</outputDirectory>
 					<append>true</append>
 				</configuration>
 				<executions>
