--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,15 +14,14 @@ sonar.links.issue=https://github.com/turesheim/eclipse-timekeeper/issues
 sonar.sources=src 
 sonar.language=java
 sonar.java.coveragePlugin=jacoco
-sonar.coverage.jacoco.xmlReportPaths=target/jacoco/jacoco.xml
-sonar.jacoco.reportPaths=target/jacoco.exec,target/jacoco-it.exec
+#sonar.coverage.jacoco.xmlReportPaths=target/jacoco/jacoco.xml
 sonar.sources=src,src-test
-sonar.java.binaries=/target/classes
+sonar.java.binaries=target/classes
 
 # java version used by source files:
 sonar.java.source=8
 
-sonar.modules=net.resheim.eclipse.timekeeper.db,net.resheim.eclipse.timekeeper.ui,net.resheim.eclipse.timekeeper.test
+sonar.modules=net.resheim.eclipse.timekeeper.db,net.resheim.eclipse.timekeeper.ui
 # Database plugin
 net.resheim.eclipse.timekeeper.db.sonar.projectName=Timekeeper Database
 net.resheim.eclipse.timekeeper.db.sonar.sources=src
@@ -32,7 +31,3 @@ net.resheim.eclipse.timekeeper.db.sonar.java.binaries=target/classes
 net.resheim.eclipse.timekeeper.ui.sonar.projectName=Timekeeper User Interface
 net.resheim.eclipse.timekeeper.ui.sonar.sources=src
 net.resheim.eclipse.timekeeper.ui.sonar.java.binaries=target/classes
-# Database plugin
-net.resheim.eclipse.timekeeper.db.sonar.projectName=Timekeeper Integration Tests
-net.resheim.eclipse.timekeeper.db.sonar.sources=src
-net.resheim.eclipse.timekeeper.db.sonar.java.binaries=target/classes
