Fix #155: Sonar coverage reports are excluding the UI plugin
* Attempt to fix SonarCloud not picking up results

Task-Url: https://github.com/turesheim/eclipse-timekeeper/issues/155

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,7 +14,7 @@ sonar.links.issue=https://github.com/turesheim/eclipse-timekeeper/issues
 sonar.sources=src 
 sonar.language=java
 sonar.java.coveragePlugin=jacoco
-#sonar.coverage.jacoco.xmlReportPaths=target/jacoco/jacoco.xml
+sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco-aggregate/jacoco.xml
 sonar.sources=src,src-test
 sonar.java.binaries=target/classes
 
