Task 155 sonar coverage report (#156)
Fix #155: Sonar coverage reports are excluding the UI plugin

* JaCoCo reports look right with about 60% coverage in total

Task-Url: https://github.com/turesheim/eclipse-timekeeper/issues/155

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,14 +11,17 @@ sonar.links.ci=https://travis-ci.org/turesheim/eclipse-timekeeper
 sonar.links.scm=https://github.com/turesheim/eclipse-timekeeper.git
 sonar.links.issue=https://github.com/turesheim/eclipse-timekeeper/issues
 
-# we simply need this to stop the whining
 sonar.sources=src 
+sonar.language=java
 sonar.java.coveragePlugin=jacoco
+sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco-aggregate/jacoco.xml
+sonar.sources=src,src-test
+sonar.java.binaries=target/classes
 
 # java version used by source files:
 sonar.java.source=8
 
-sonar.modules=net.resheim.eclipse.timekeeper.db,net.resheim.eclipse.timekeeper.ui,net.resheim.eclipse.timekeeper.test
+sonar.modules=net.resheim.eclipse.timekeeper.db,net.resheim.eclipse.timekeeper.ui
 # Database plugin
 net.resheim.eclipse.timekeeper.db.sonar.projectName=Timekeeper Database
 net.resheim.eclipse.timekeeper.db.sonar.sources=src
@@ -28,7 +31,3 @@ net.resheim.eclipse.timekeeper.db.sonar.java.binaries=target/classes
 net.resheim.eclipse.timekeeper.ui.sonar.projectName=Timekeeper User Interface
 net.resheim.eclipse.timekeeper.ui.sonar.sources=src
 net.resheim.eclipse.timekeeper.ui.sonar.java.binaries=target/classes
-# Integration tests
-net.resheim.eclipse.timekeeper.test.sonar.projectName=Timekeeper Integration Tests
-net.resheim.eclipse.timekeeper.test.sonar.sources=src
-net.resheim.eclipse.timekeeper.test.sonar.java.binaries=target/classes
