--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ before_install:
   - sh -e /etc/init.d/xvfb start - sleep 10 
 
 script: 
-  - mvn clean verify -Pother-os -Dtycho.localArtifacts=ignore
-  - sonar-scanner
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=turesheim_eclipse-timekeeper -Pother-os -Dtycho.localArtifacts=ignore
 jdk:
   - openjdk8
 cache:
@@ -20,7 +19,7 @@ addons:
   sonarcloud:
     organization: "turesheim-github"
     token:
-      secure: "ASUilEjJT5fYjMN6Cy5gVeY1fuKiIwEKLX9sxPltAowFABpzzimgLy+Ytbvh1GLsqnCXtVOYSkcClpNHezkuJwVMopj/IQiVl3cB9Qm3BySCgsQVPWHy2+DZ/sMMVMoVdtiQaycP3a8GY3tbi6Wofbb090vmPHNcn13AWEWXOBA="
+      secure: "QiZ2QkV0M4jvvXjWWV+jEXXzRXtuHcrJzdP9/VUQCeo96SawZMuzW8IsREG8sqr5QGUx18kK2Imrey9WrnSKYqc4uEfHA78fZ8u4ECCI1B9mFy+xdi3BxzoH2QXZnrQQkqrvICj9iPbsZFJMrPYct3eo/UxBbaOoqaQ5/Ulf9To="
 deploy:
   # Deploy to GitHub releases if the master branch has been tagged
   provider: releases
