Use GitHub Actions for build instead of Travis-CI

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.projectVersion=2.0.0-SNAPSHOT
 # =====================================================
 
 sonar.links.homepage=https://github.com/turesheim/eclipse-timekeeper
-sonar.links.ci=https://travis-ci.org/turesheim/eclipse-timekeeper
+sonar.links.ci=https://github.com/turesheim/eclipse-timekeeper/actions
 sonar.links.scm=https://github.com/turesheim/eclipse-timekeeper.git
 sonar.links.issue=https://github.com/turesheim/eclipse-timekeeper/issues
 
