Fix #161: Update to latest Flyway version (6.3.3)
Task-Url: https://github.com/turesheim/eclipse-timekeeper/issues/161

--- a/net.resheim.eclipse.timekeeper.db/build.properties
+++ b/net.resheim.eclipse.timekeeper.db/build.properties
@@ -6,4 +6,5 @@ bin.includes = META-INF/,\
                db/,\
                plugin.xml,\
                lib/,\
-               templates/
+               templates/,\
+               lib/flyway-core-6.3.3.jar
