--- a/net.resheim.eclipse.timekeeper.db/.classpath
+++ b/net.resheim.eclipse.timekeeper.db/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/flyway-core-5.0.7.jar" sourcepath="/Users/torkild/Development/Libraries/flyway-core-5.0.7-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/flyway-core-6.3.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/freemarker-2.3.27.jar" sourcepath="/Users/torkild/Development/Libraries/apache-freemarker-2.3.27-incubating-src/src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
