Fix #163: Store project, task URL and name in database
* Add Mylyn GitHub features for testing
* Update target platform
* Update Flyway version
* Clean up launch configurations
* Put data model in separate package
* A bit of refactoring
* Remove migration from 1.0 key value store

Task-Url: https://github.com/turesheim/eclipse-timekeeper/issues/163

--- a/net.resheim.eclipse.timekeeper.test/pom.xml
+++ b/net.resheim.eclipse.timekeeper.test/pom.xml
@@ -16,7 +16,7 @@
 	<packaging>eclipse-test-plugin</packaging>
 
 	<properties>
-		<uitest.vmparams>-Dorg.eclipse.swtbot.search.timeout=10000 -Xmx1024m -Dscreenshots=${project.build.directory}/../../images -Dnet.resheim.eclipse.timekeeper.db.url=jdbc:h2:mem:test_mem</uitest.vmparams>
+		<uitest.vmparams>-Dorg.eclipse.swtbot.search.timeout=10000 -Xmx1024m -Dscreenshots=${project.build.directory}/../../images -Dnet.resheim.eclipse.timekeeper.db.url=jdbc:h2:mem:timekeeper_db;DB_CLOSE_DELAY=-1</uitest.vmparams>
 	</properties>
 
 	<profiles>
