--- a/net.resheim.eclipse.timekeeper.db/.classpath
+++ b/net.resheim.eclipse.timekeeper.db/.classpath
@@ -2,11 +2,6 @@
 <classpath>
 	<classpathentry exported="true" kind="lib" path="lib/flyway-core-6.4.0.jar" sourcepath="/Users/torkild/Development/Libraries/flyway-core-6.4.0-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/freemarker-2.3.27.jar" sourcepath="/Users/torkild/Development/Libraries/apache-freemarker-2.3.27-incubating-src/src/main/java"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="lib" path="lib/h2-1.4.194.jar"/>
 	<classpathentry kind="src" path="src"/>
@@ -23,5 +18,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11">
+		<attributes>
+			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
