--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-    Copyright (c) 2015-2019 Torkild U. Resheim
-    All rights reserved. This program and the accompanying materials
-    are made available under the terms of the Eclipse Public License v1.0
-    which accompanies this distribution, and is available at
-    http://www.eclipse.org/legal/epl-v10.html
-   
-    Contributors:
-        Torkild U. Resheim - initial API and implementation
- -->
+<!-- 
+	Copyright (c) 2015-2019 Torkild U. Resheim All rights reserved. This 
+	program and the accompanying materials are made available under the terms 
+	of the Eclipse Public License v1.0 which accompanies this distribution, and 
+	is available at http://www.eclipse.org/legal/epl-v10.html Contributors: Torkild 
+	U. Resheim - initial API and implementation
+-->
 
 <project
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 
 	<prerequisites>
@@ -48,7 +46,7 @@
 		available under the terms of the Eclipse Public License v1.0
 		which accompanies this distribution, and is available at
 		http://www.eclipse.org/legal/epl-v10.htm
-      </comments>
+			</comments>
 		</license>
 	</licenses>
 
@@ -58,8 +56,8 @@
 		<jacoco.version>0.8.4</jacoco.version>
 		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>		
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 	</properties>
 
 	<organization>
@@ -70,12 +68,12 @@
 	<build>
 		<plugins>
 			<plugin>
-			  <groupId>org.eclipse.tycho</groupId>
-			  <artifactId>tycho-compiler-plugin</artifactId>
-			  <version>${tycho.version}</version>
-			  <configuration>
-			    <useProjectSettings>true</useProjectSettings>
-			  </configuration>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-compiler-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<configuration>
+					<useProjectSettings>true</useProjectSettings>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
@@ -114,7 +112,7 @@
 							<arch>x86_64</arch>
 						</environment>
 					</environments>
-                    <pomDependencies>consider</pomDependencies>
+					<pomDependencies>consider</pomDependencies>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -141,28 +139,28 @@
 				</dependencies>
 			</plugin>
 			<plugin>
-	            <groupId>org.jacoco</groupId>
-	            <artifactId>jacoco-maven-plugin</artifactId>
-	            <version>${jacoco.version}</version>
-	            <configuration>
-	                <destFile>${sonar.jacoco.reportPath}</destFile>
-	                <append>true</append>
-	            </configuration>
-	            <inherited>true</inherited>
-	            <executions>
-	                <execution>
-	                    <goals>
-	                        <goal>prepare-agent</goal>
-	                    </goals>
-	                </execution>
-         			<execution>
-            			<id>integration-test-report</id>
-            			<phase>verify</phase>
-            			<goals>
-              				<goal>report-aggregate</goal>
-            			</goals>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+				<configuration>
+					<destFile>${sonar.jacoco.reportPath}</destFile>
+					<append>true</append>
+				</configuration>
+				<inherited>true</inherited>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
 					</execution>
-          		</executions>
+					<execution>
+						<id>integration-test-report</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>report-aggregate</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
