--- a/net.resheim.eclipse.timekeeper.db/build.properties
+++ b/net.resheim.eclipse.timekeeper.db/build.properties
@@ -1,6 +1,6 @@
-source.. = src/
+source.. = src/main/java/
 output.. = target/classes/
-src.excludes = src-test/
+src.excludes = src/test/java/
 bin.includes = META-INF/,\
                .,\
                db/,\
