--- a/net.resheim.eclipse.timekeeper-feature/pom.xml
+++ b/net.resheim.eclipse.timekeeper-feature/pom.xml
@@ -4,15 +4,19 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>net.resheim.eclipse.timekeeper</artifactId>
-	<packaging>eclipse-feature</packaging>
-
 	<parent>
 		<artifactId>net.resheim.eclipse.timekeeper-parent</artifactId>
 		<relativePath>../pom.xml</relativePath>
 		<groupId>net.resheim.eclipse.timekeeper</groupId>
 		<version>2.0.0-SNAPSHOT</version>
 	</parent>
+
+	<artifactId>net.resheim.eclipse.timekeeper</artifactId>
+	<packaging>eclipse-feature</packaging>
+
+	<properties>
+		<sonar.skip>true</sonar.skip>
+	</properties>
 
 	<build>
 		<pluginManagement>
