--- a/net.resheim.eclipse.timekeeper-site/pom.xml
+++ b/net.resheim.eclipse.timekeeper-site/pom.xml
@@ -13,6 +13,11 @@
 	<artifactId>net.resheim.eclipse.timekeeper-site</artifactId>
 	<name>Timekeeper for Eclipse p2 Repository</name>
 	<packaging>eclipse-repository</packaging>
+	
+	<properties>
+		<sonar.skip>true</sonar.skip>
+	</properties>
+	
 	<build>
 		<plugins>
 			<plugin>
