--- a/net.resheim.eclipse.timekeeper.db/.classpath
+++ b/net.resheim.eclipse.timekeeper.db/.classpath
@@ -4,8 +4,13 @@
 	<classpathentry exported="true" kind="lib" path="lib/freemarker-2.3.27.jar" sourcepath="/Users/torkild/Development/Libraries/apache-freemarker-2.3.27-incubating-src/src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="lib" path="lib/h2-1.4.194.jar"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry including="**/*.java" kind="src" output="target/test-classes" path="src-test">
+	<classpathentry kind="src" output="target/classes" path="src/main/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
 			<attribute name="test" value="true"/>
 			<attribute name="optional" value="true"/>
@@ -20,7 +25,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11">
 		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
