--- a/net.resheim.eclipse.timekeeper.ui/.classpath
+++ b/net.resheim.eclipse.timekeeper.ui/.classpath
@@ -6,7 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src"/>
+  <classpathentry kind="src" path="src/main/java"/>
 	<classpathentry exported="true" kind="lib" path="lib/jna-5.5.0.jar" sourcepath="/Users/torkild/Development/Libraries/jna-5.5.0/src"/>
 	<classpathentry exported="true" kind="lib" path="lib/jna-platform-5.5.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
