Try to exclude XML-files

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,7 +14,8 @@ sonar.links.issue=https://github.com/turesheim/eclipse-timekeeper/issues
 sonar.language=java
 sonar.java.coveragePlugin=jacoco
 sonar.exclusions=**/*.xml
-sonar.coverage.exclusions=**/*.xml
+# this property does not work
+#sonar.coverage.exclusions=**/*.xml
 sonar.sources=src/main/java,src/test/java
 sonar.java.binaries=target/classes
 
