--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,23 +11,28 @@ sonar.links.ci=https://github.com/turesheim/eclipse-timekeeper/actions
 sonar.links.scm=https://github.com/turesheim/eclipse-timekeeper.git
 sonar.links.issue=https://github.com/turesheim/eclipse-timekeeper/issues
 
-sonar.sources=src 
 sonar.language=java
 sonar.java.coveragePlugin=jacoco
-sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco-aggregate/jacoco.xml
-sonar.sources=src,src-test
+sonar.exclusions=**/*.xml
+# this property does not work
+#sonar.coverage.exclusions=**/*.xml
+sonar.sources=src/main/java,src/test/java
 sonar.java.binaries=target/classes
 
 # java version used by source files:
-sonar.java.source=8
+sonar.java.source=11
 
-sonar.modules=net.resheim.eclipse.timekeeper.db,net.resheim.eclipse.timekeeper.ui
+sonar.modules=net.resheim.eclipse.timekeeper.db,net.resheim.eclipse.timekeeper.ui,net.resheim.eclipse.timekeeper.ui
 # Database plugin
 net.resheim.eclipse.timekeeper.db.sonar.projectName=Timekeeper Database
-net.resheim.eclipse.timekeeper.db.sonar.sources=src
-net.resheim.eclipse.timekeeper.db.sonar.tests=src-test
+net.resheim.eclipse.timekeeper.db.sonar.sources=src/main/java
+net.resheim.eclipse.timekeeper.db.sonar.tests=src/test/java
 net.resheim.eclipse.timekeeper.db.sonar.java.binaries=target/classes
 # User interface plugin
 net.resheim.eclipse.timekeeper.ui.sonar.projectName=Timekeeper User Interface
-net.resheim.eclipse.timekeeper.ui.sonar.sources=src
+net.resheim.eclipse.timekeeper.ui.sonar.sources=src/main/java
 net.resheim.eclipse.timekeeper.ui.sonar.java.binaries=target/classes
+# Integration test plugin
+net.resheim.eclipse.timekeeper.test.sonar.projectName=Timekeeper Integration Tests
+net.resheim.eclipse.timekeeper.test.sonar.sources=src/main/java
+net.resheim.eclipse.timekeeper.test.sonar.java.binaries=target/classes
