--- a/net.resheim.eclipse.timekeeper.db/.classpath
+++ b/net.resheim.eclipse.timekeeper.db/.classpath
@@ -1,32 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/flyway-core-6.4.0.jar" sourcepath="/Users/torkild/Development/Libraries/flyway-core-6.4.0-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/freemarker-2.3.27.jar" sourcepath="/Users/torkild/Development/Libraries/apache-freemarker-2.3.27-incubating-src/src/main/java"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry exported="true" kind="lib" path="lib/h2-1.4.194.jar"/>
-	<classpathentry kind="src" output="target/classes" path="src/main/java">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry including="**/*.java" kind="src" output="target/test-classes" path="src/test/java">
-		<attributes>
-			<attribute name="test" value="true"/>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry exported="true" kind="lib" path="lib/h2-1.4.194.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/freemarker-2.3.27.jar" sourcepath="/Users/torkild/Development/Libraries/apache-freemarker-2.3.27-incubating-src/src/main/java"/>
+	<classpathentry exported="true" kind="lib" path="lib/flyway-core-6.3.3.jar"/>
+	<classpathentry kind="src" path="src/main/java/"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
