--- a/net.resheim.eclipse.timekeeper.ui/.classpath
+++ b/net.resheim.eclipse.timekeeper.ui/.classpath
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11">
 		<attributes>
 			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jna-platform-5.6.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="lib" path="lib/jna-5.6.0.jar"/>
+	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry exported="true" kind="lib" path="lib/jna-5.11.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jna-platform-5.11.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
