--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
       uses: actions/upload-artifact@v1
       if: always()
       with:
-        name: Screenshots
+        name: Documentation Screenshots
         path: images
 
     - name: Upload Failed Tests screenshots
