--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,19 +32,19 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         
+    - name: Upload Failed Tests screenshots
+      uses: actions/upload-artifact@v3
+      if: failure()
+      with:
+        name: Failed tests screenshots
+        path: net.resheim.eclipse.timekeeper.test/screenshots
+
     - name: Upload screenshots
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v3
       if: always()
       with:
         name: Documentation screenshots
         path: images
-
-    - name: Upload Failed Tests screenshots
-      uses: actions/upload-artifact@v1
-      if: always()
-      with:
-        name: Failed tests screenshots
-        path: net.resheim.eclipse.timekeeper.test/screenshots
 
     - name: Publish Surefire report
       uses: ScaCap/action-surefire-report@v1.0.13
