--- a/net.resheim.eclipse.timekeeper.ui/plugin.xml
+++ b/net.resheim.eclipse.timekeeper.ui/plugin.xml
@@ -58,6 +58,26 @@
                optional="true">
          </commandParameter>
       </command>
+      <command
+            defaultHandler="net.resheim.eclipse.timekeeper.ui.commands.AddLabelCommand"
+            id="net.resheim.eclipse.timekeeper.ui.addLabelCommand"
+            name="Add Label">
+         <commandParameter
+               id="net.resheim.eclipse.timekeeper.ui.addLabelCommand_id"
+               name="id"
+               optional="true">
+         </commandParameter>
+      </command>
+      <command
+            defaultHandler="net.resheim.eclipse.timekeeper.ui.commands.RemoveLabelCommand"
+            id="net.resheim.eclipse.timekeeper.ui.removeLabelCommand"
+            name="Remove Label">
+         <commandParameter
+               id="net.resheim.eclipse.timekeeper.ui.removeLabelCommand_id"
+               name="id"
+               optional="true">
+         </commandParameter>
+      </command>
    </extension>
    <extension
          point="org.eclipse.ui.menus">
@@ -89,6 +109,14 @@
          <dynamic
                class="net.resheim.eclipse.timekeeper.ui.export.TemplateExportMenu"
                id="net.resheim.eclipse.timekeeper.ui.dynamicTemplateMenu">
+         </dynamic>
+      </menuContribution>
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:net.resheim.eclipse.timekeeper.ui.views.workWeek?after=labels">
+         <dynamic
+               class="net.resheim.eclipse.timekeeper.ui.ActivityLabelMenu"
+               id="net.resheim.eclipse.timekeeper.ui.dynamicActivityLabelMenu">
          </dynamic>
       </menuContribution>
    </extension>
