--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright (c) 2015-2019 Torkild U. Resheim All rights reserved. This 
+<!-- 
+	Copyright (c) 2015-2022 Torkild U. Resheim All rights reserved. This 
 	program and the accompanying materials are made available under the terms 
 	of the Eclipse Public License v1.0 which accompanies this distribution, and 
 	is available at http://www.eclipse.org/legal/epl-v10.html Contributors: Torkild 
-	U. Resheim - initial API and implementation -->
+	U. Resheim - initial API and implementation
+-->
 
 <project
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
@@ -49,7 +51,7 @@
 	</licenses>
 
 	<properties>
-		<tycho.version>2.7.0</tycho.version>
+		<tycho.version>2.7.5</tycho.version>
 		<tycho.scmUrl>scm:git:git://github.com/turesheim/eclipse-timekeeper.git</tycho.scmUrl>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>11</maven.compiler.source>
